<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
						android:layout_width="match_parent"
						android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<Button
			android:id="@+id/bt_force_crawl"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/debug_force_crawling"/>

		<Button
			android:id="@+id/bt_refresh_photo_listing_pager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/debug_refresh_photo_list"/>

		<Button
			android:id="@+id/bt_clear_fresco_cache"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/debug_clear_fresco_cache"/>

		<Button
			android:id="@+id/bt_delete_downloaded_photos"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/debug_clear_photo_files"/>

	</LinearLayout>

</ScrollView>