<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity2"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.xkcn.gallery.view.SidebarView
        android:id="@+id/sidebar"
        android:layout_gravity="start"
        android:onClick="emptyOnClick"
        android:layout_width="300dp"
        android:layout_height="match_parent">
        
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_sidebar_items"
                android:showDividers="middle"
                android:divider="@drawable/sidebar_divider"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.fantageek.toolkit.view.typeface.TypefaceTextView
                    app:font="@string/font_noto_r"
                    android:gravity="center"
                    android:textColor="@color/sidebar_last_update_text"
                    android:textSize="18sp"
                    android:id="@+id/tv_last_update_time"
                    tools:text="Cập nhật lần cuối 12:00PM 29/10/2015"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.fantageek.toolkit.view.typeface.TypefaceButton
                    style="@style/CategorySideBarButton"
                    android:background="@drawable/sidebar_latest_btn_bg"
                    android:textColor="@color/sidebar_latest_btn_text"
                    android:id="@+id/tv_latest"
                    android:text="@string/sidebar_cat_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.fantageek.toolkit.view.typeface.TypefaceButton
                    style="@style/CategorySideBarButton"
                    android:background="@drawable/sidebar_hotest_btn_bg"
                    android:textColor="@color/sidebar_hotest_btn_text"
                    android:id="@+id/tv_hotest"
                    android:text="@string/sidebar_cat_hotest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

    </com.xkcn.gallery.view.SidebarView>

</android.support.v4.widget.DrawerLayout>